Порт на Minecraft 1.16.5
- обновлены версии Minecraft, Forge и Fabric под 1.16.5

- общий код ветки приведён к Java 8

- для Forge добавлена генерация MCP-совместимых common sources

- ветка собирает Forge и Fabric без NeoForge